--- a/src/components/Programs/Events/Events.css
+++ b/src/components/Programs/Events/Events.css
@@ -1,8 +1,8 @@
-.events header > h1{
+.program-events header > h1{
     font-size: 2.2rem;
 }
 
-.events{
+.program-events{
     width: 100%;
     /* height: 75vh; */
     background-color: #312F44;
@@ -13,26 +13,26 @@
     gap: 2rem;
 }
 
-.events header{
+.program-events header{
     width: 100%;
-    height: 25%;
+    /* height: 25%; */
 }
 
-.events header hr{
+.program-events header hr{
     background-color: #2d784e;
     width: 5%;
     height: 7px;
     border: 0;
 }
 
-.events main{
+.program-events main{
     width: 100%;
     /* height: 75%; */
     display: flex;
     gap: 1rem;
 }
 
-main .events-container{
+main .program-events-container{
     width: 25%;
     height: 20rem;
     display: flex;
@@ -40,7 +40,7 @@ main .events-container{
     margin-left: 3rem;
 }
 
-.events-container .event{
+.program-events-container .program-event{
     width: 100%;
     height: 100%;
     background-color: whitesmoke;
@@ -48,28 +48,28 @@ main .events-container{
     border-radius: 10px;
 }
 
-.event .eventTitle{
+.program-event .eventTitle{
     color: black;
     padding: 1rem;
-    font-size: 0.85rem;
+    font-size: 1rem;
 }
 
-.event .eventImg{
+.program-event .eventImg{
     width: 100%;
     height: 60%;
     border-radius: inherit;
 }
-.event .eventImg img{
+.program-event .eventImg img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: inherit;
 }
-.event .eventButton{
+.program-event .eventButton{
     text-align: center;
 }
 
-.event .eventButton button{
+.program-event .eventButton button{
     border: 0;
     color: #2d784e;
     font-size: 1rem;
@@ -78,7 +78,6 @@ main .events-container{
 
 main .more-events{
     width: 80%;
-    height: 100%;
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -104,40 +103,49 @@ main .more-events{
     color: #312F44;
 }
 
+
+@media (max-width:1200px) {
+    main .program-events-container{
+        width: 30%;
+    }
+    main .more-events{
+        width: 70%;
+    }
+    .program-event .eventTitle{
+        font-size: 0.9rem;
+    }   
+    .program-event .eventButton button{
+        font-size: 1rem;
+    }
+}
+
 @media (max-width:1000px){
     .more-events h1{
-        font-size: 1.7rem;
+        font-size: 1.8rem;
     }
     .more-events button{
-     font-size: 0.8rem;
-     padding: 0.3rem;
+     font-size: 0.85rem;
+     padding: 0.35rem;
     }
 
-    .events{
+    .program-events{
         padding-block: 3rem;
-        height: 70vh;
+        padding-inline: 3.5rem;
     }
-    main .events-container{
-        height: 16rem;
+    main .program-events-container{
         width: 30%;
     }
 
 }
 
 @media (max-width:850px) {
-    .events{
+    .program-events{
         padding-inline: 3rem;
+        /* height: 80vh; */
     }
-    main .events-container{
+    main .program-events-container{
         width: 40%;
         margin-left: 1rem;
-    }
-    .event .eventTitle{
-        font-size: 0.7rem;
-        padding: 0.7rem;
-    }   
-    .event .eventButton button{
-        font-size: 0.8rem;
     }
 
     main .more-events{
@@ -145,47 +153,55 @@ main .more-events{
     }
 }
 
-@media (max-width:650px) {
-    .more-events h1{
-        font-size: 1.5rem;
-    }
-    .more-events button{
-     font-size: 0.7rem;
-    }
-    .events main{
+@media (max-width:650px){
+    .program-events main{
         flex-flow: column;
         align-items: center;
-        gap: 2rem;
+        gap: 4rem;
     }   
-    .events-container .event{
-        width: 100vw;
-    }
-    main .events-container{
-        padding: 0;
-        margin: 0;
-    }
-}
-
-@media (max-width:505px){
-    .events{
-        height: 85vh;
+    .program-events{
+        height: 75vh;
         padding-inline: 2rem;
-        gap: 0rem;
+        gap: 2rem;
     }
-    main .events-container{
-        width: 80%;
+    main .program-events-container{
+        width: 65%;
     }
 
+    .program-event .eventTitle{
+        font-size: 1rem;
+    }
     .events header{
-        height: 18%;
+        /* height: 18%; */
     }
     main .more-events{
         gap: 0.9rem;
+        width: 100%;
+        text-align: center;
     }
-    .event .eventTitle{
-        font-size: 0.8rem;
-    }   
-    .event .eventButton button{
-        font-size: 0.9rem;
+
+}
+
+@media (max-width:505px){
+    .program-events main{
+        gap: 2.5rem;
+    }
+
+    .program-events{
+        gap: 2rem;
+        padding-inline: 1rem;
+        height: 75vh;
+    }
+    .more-events h1{
+        font-size: 1.5rem;
+    }
+    main .program-events-container{
+        width: 75%;
+    }
+}
+
+@media (max-width:400px) {
+    main .programs-events-container{
+        width: 85%;
     }
 }
