--- a/src/components/Programs/Hero/hero.css
+++ b/src/components/Programs/Hero/hero.css
@@ -5,7 +5,7 @@
 }
 
 .programs .hero-cover{
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 100%;
     z-index: 10;
@@ -39,6 +39,7 @@
 .hero-cover h1{
     font-size: 4rem;
     width: 50%;
+    animation: txtSlideIn 0.3s linear forwards;
 }
 
 .hero-cover p{
@@ -46,6 +47,10 @@
     width: 40%;
     color: lightgray;
     line-height: 2.3;
+    transform: translateX(10rem);
+    opacity: 0;
+    animation: txtSlideIn 0.3s linear forwards;
+    animation-delay: 0.1s;
 }
 
 .hero img{
@@ -55,185 +60,82 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* object-position: 0 -980px; */
     z-index: -10;
+    animation: imageFadeIn 0.3s linear forwards;
+}
+@keyframes imageFadeIn{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@keyframes txtSlideIn{
+    from{
+        transform: translateX(10rem);
+        opacity: 0;
+    }
+    to{
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 
-@media (max-width:1500px) {
-    .hero{
-       height: 80vh;
-    }   
-   
-   }
-   @media (max-width:1400px) {
-    .hero{
-       height: 75vh;
-    }   
+@media (max-width:800px) {
+    .hero-cover h1{
+        font-size: 3.5rem;
+    }
     .hero-cover p{
-       width: 32%;
-   }
-   
-   .description{
-       height: 40vh;
-   }
-   
-   .description .heading{
-       font-size: 1.2rem;
-   }
-   
-   }
-   @media (max-width:1305px) {
+        width: 70%;
+    }
     .hero{
-       height: 65vh;
-    }   
-    
-   }
-   @media (max-width:1200px) {
-    .hero{
-       height: 55vh;
-    }   
-   .hero-cover h1{
-       font-size: 3.1rem;
-   }
-   .hero-cover p{
-       font-size: 0.8rem;
-   }
+        height: 80vh;
+    }
 }
-   
-   @media (max-width:1100px) {
-       
-       .hero-cover h1{
-           font-size: 2.8rem;
-       }
-       
-      }
-   
-      @media (max-width:1000px) {
-       .hero{
-   
-       }   
-       .hero-cover h1{
-           font-size: 2.5rem;
-       }
-       .hero-cover p{
-           font-size: 0.6rem;
-       }
-      
-      }
-   
-      @media (max-width:905px) {
-       .hero-cover h1{
-           font-size: 2.2rem;
-           width: 40%;
-       } 
-       .description .heading h2{
-        font-size: 1.3rem;
-        }
 
-       }
-       @media (max-width:800px) {
-           .hero{
-              height: 48vh;
-   
-           }   
-           .hero-cover p{
-               width: 37.5%;
-           }
-           .hero-cover h1{
-               width: 45%;
-           }
-           .hero .hero-cover{
-               padding-inline: 4rem;
-           }
-           .hero .hero-cover .left{
-              width: 40px;
-              height: 40px;  
-           }
-           .hero .hero-cover .right{
-              width: 40px;
-              height: 40px;  
-           }
-           .description .heading h2{
-               width: 100%;
-               font-size: 1.1rem;
-           }
-          
-          }
-          @media (max-width:705px) {
-           .hero{
-              height: 40vh;
-           } 
-           .hero .hero-cover{
-               padding-inline: 3.5rem;
-           }  
-           .hero-cover h1{
-               font-size: 2rem;
-           }
-           .hero-cover p{
-               width: 40%;
-           }
-           .hero img{
-               object-position: 0 -80px;
-           }
-           
-          }
-          @media (max-width:610px){
-           .hero{
-               height: 35vh;
-            } 
-            .hero img{
-               object-position: 0 -60px;
-           }
-           .hero-cover h1{
-               font-size: 1.7rem;
-           }
-           .hero-cover p{
-               font-size: 0.5rem;
-           }
-           
-          }
-          @media (max-width:500px) {
-           .hero{
-               height: 28vh;
-           } 
-           .hero .hero-cover{
-               gap: 0.65rem;
-           }
-           .hero-cover h1{
-               width: 40%;
-               font-size: 1.5rem;
-           }
-           .hero-cover p{
-            line-height: 2;
-           }
-           .hero img{
-               object-position: 0 -55px;
-           }
-           
-          }
-          @media (max-width:410px){
-           .hero{
-               height: 25vh;
-           } 
-           .hero-cover h1{
-               font-size: 1.2rem;
-           }
-           .hero-cover p{
-            line-height: 1.5;
-           }
-           .hero .hero-cover{
-            gap: 0.7rem;
-           }
-           .hero img{
-               object-position: 0 -50px;
-           }
-           .hero .hero-cover .left{
-            width: 30px;
-            height: 30px;  
-         }
-         .hero .hero-cover .right{
-            width: 30px;
-            height: 30px;  
-         }
-          }
-       
+@media (max-width:700px) {
+    .hero{
+        height: 70vh;
+    }
+
+    .hero img{
+        object-position: top 0px left -80px;
+    }
+}
+@media (max-width:600px) {
+    .hero-cover h1{
+        font-size: 3rem;
+    }
+    .hero-cover p{
+        line-height: 1.5;
+        width: 85%;
+    }
+    .programs .hero-cover{
+        padding-inline: 4rem;
+    }
+    .hero-cover .right{
+        width: 50px;
+        height: 50px;
+    }
+    .hero-cover .left{
+        width: 50px;
+        height: 50px;
+    }
+    .hero img{
+        object-position: top 0px left -220px;
+    }
+}    
+
+@media (max-width:500px) {
+    .hero{
+        height: 65vh;
+    }
+    .hero-cover h1{
+        font-size: 2.5rem;
+    }
+    .hero-cover p{
+        line-height: 1.2;
+        width: 85%;
+    }
+}
