--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -65,23 +65,14 @@
 @media(max-width:1100px){
     .navbar .nav-links{
         gap: 1rem;
+        z-index: 700;
     }
 }
 @media(max-width:1000px){
     .navbar{
-        padding-bottom: 2rem;
+        padding: 0rem;
+
     }
-    /* .navbar::before{
-        position: absolute;
-        content: "";
-        z-index: 900;
-        width: 100%;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        background-color: rgba(0,0,0,0.7);
-        backdrop-filter: blur(10px);
-    } */
     .navbar.closed{
         z-index: 1000;
     }
@@ -101,15 +92,16 @@
         position: absolute;
         flex-flow: column;
         align-items: center;
-        gap: 1rem;
+        gap: 1.5rem;
         right: 0;
-        transform: translateY(15rem);
+        transform: translateY(16.5rem);
         z-index: 500;
         width: 100vw;
-        /* height: 70vh; */
         transition: all 0.4s ease;
         background-color: #312F44;
         color: #fff;
+        padding-block: 1.5rem;
+        
     }
     .navbar .nav-links a{
         color: #fff;
