--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 body{
     font-family: "Lato", sans-serif;
     width: 100vw;
     height: 100vh;
     overflow-x: hidden;
+}
+body > div{
+  overflow-x: hidden;
 }
 ::-webkit-scrollbar{
   width: 15px;
