--- a/src/components/OpenEvent/OpenEventImages/OpenEventImages.css
+++ b/src/components/OpenEvent/OpenEventImages/OpenEventImages.css
@@ -32,6 +32,8 @@
   width: 100%;
   object-position: top 10% left 0;
   animation: fadeIn 0.3s linear forwards;
+  object-fit: contain;
+  object-position: center;
 }
 .events-images .selected-image img {
   object-fit: cover;
